--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,17 +23,11 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        {% if site.github.is_project_page %}
-        <p class="view"><a href="{{ site.github.repository_url }}">View the Project on GitHub <small>{{ site.github.repository_nwo }}</small></a></p>
-        {% endif %}
+        <p><a href="www.linkedin.com/in/nick-sanders-844588245" target="_blank">LinkedIn</a></p>
 
-        {% if site.show_downloads %}
-        <ul class="downloads">
-          <li><a href="{{ site.github.zip_url }}">Download <strong>ZIP File</strong></a></li>
-          <li><a href="{{ site.github.tar_url }}">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="{{ site.github.repository_url }}">View On <strong>GitHub</strong></a></li>
-        </ul>
-        {% endif %}
+        <p><a href="https://orcid.org/0009-0008-0020-2995" target="_blank">Orcid</a></p>
+
+        
       </header>
       <section>
 
