--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,7 @@
 
         <p>{{ site.description | default: site.github.project_tagline }}</p>
 
-        <p><a href="www.linkedin.com/in/nick-sanders-844588245" target="_blank">LinkedIn</a></p>
+        <p><a href="https://www.linkedin.com/in/nick-sanders-844588245/" target="_blank">LinkedIn</a></p>
 
         <p><a href="https://orcid.org/0009-0008-0020-2995" target="_blank">Orcid</a></p>
 
